--- a/kitovi.tex
+++ b/kitovi.tex
@@ -84,7 +84,7 @@
 		\frac{dy}{dt} = 0.08y(1 - \frac{y}{400000}) - axy
 	\end{equation}
 	\\
-	Gde nam \textit{x} i \textit{y} predstavljaju populacije plavih kitova i kitova perajara, dok je \textit{a} parametar koji nam opisuje uticaj međusobnog nadmetanja i ribarenja.\\ 
+	Gde nam \textit{x} i \textit{y} predstavljaju populacije plavih kitova i kitova perajara, dok je \textit{a} parametar koji nam opisuje uticaj međusobnog nadmetanja.\\
 	\\
 	Kako bismo pronašli stacionarna rešenja, potrebno je da obe jednačine izjednačimo sa nulom, jer nam stacionarna rešenja predstavljaju ona rešenja u kojima se populacija kitova ne menja tokom vremena.\\
 	
